Fix z-index of navigation menus
After the DOM order of content and navigation was swapped,
z-index of menus must be higher than the VisualEditor toolbar,
rather than the same, to continue overlapping it.

Bug: T264379

--- a/variables.less
+++ b/variables.less
@@ -118,7 +118,7 @@
 // @z-index-ui-datepicker-cover: -1;
 @z-index-base: 0;
 // Header z-index-header higher than z-index-menu so that search results overlay variants and more menu
-@z-index-header: 3;
+@z-index-header: 4;
 @z-index-sidebar: 1;
 @z-index-menu-checkbox: 1;
 @z-index-search-button: 1;
@@ -128,7 +128,7 @@
 // See skinStyles/jquery.ui/jquery.ui.slider.css.
 // @z-index-ui-slider-range: 1;
 // Menus must overlap indicators (@z-index-indicators) and VisualEditor toolbar (z-index: 2).
-@z-index-menu: 2;
+@z-index-menu: 3;
 // See skinStyles/jquery.ui/jquery.ui.slider.css.
 // @z-index-ui-slider-handle: 2;
 // Display on top of page tabs (T39158, T50078).
